<?xml version="1.2"?>
<package>
  <name>cyborg_bt</name>
  <version>0.0.1</version>
  <description>The NTNU Cyborg BT node.</description>
  <maintainer email="morten.mjelva@gmail.com">Morten Mjelva</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>behavior_tree_core</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>behavior_tree_core</run_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
